# temporal-code-agent-experiments

./: .gitignore  AGENTS.md  README.md  pyproject.toml
batch_processing/: .gitignore  README.md  activities.py  shared.py  starter.py  worker.py  workflow.py
order_application/: activities.py  approve.py  shared.py  starter.py  worker.py  workflow.py
order_fulfillment/: README.md  activities.py  pyproject.toml  shared.py  signals.py  starter.py  worker.py  workflow.py
order_management/: README.md  activities.py  run_e2e_test.sh  shared.py  starter.py  test_approval.py  worker.py  workflow.py
order_workflow/: README.md  __init__.py  activities.py  approval_sender.py  shared.py  starter.py  test_demo.sh  worker.py  workflow.py
