[project]
name = "order-fulfillment"
version = "0.1.0"
description = "Temporal order fulfillment sample application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
